using UnityEngine;

namespace Sample.Command.Sample3
{
    public interface ICommand
    {
        void Execute();
    }
}